Removed some spacing issues in CSS
OCD-767

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -644,15 +644,6 @@ option[disabled] {
     background: #ccc;
 }
 
-
-.selected-item  label {
-    font-weight: normal !important;;
-}
-
-.selected-item  input {
-    color: black !important;
-}
-
 .additional-input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
     color: #777777;
 }
